Fix education logo cropping

--- a/_sass/layout/_home.scss
+++ b/_sass/layout/_home.scss
@@ -290,7 +290,7 @@
   width: 100px;
   height: 100px;
   border-radius: 30px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .research-areas {
